@@ -1,10 +1,14 @@
-DIST tzinfo-0.3.3.gem 290304 RMD160 3f9cc1a988d1b56c5ddcc4ef54bbf99d6ec097ed SHA1 c7b801735fe02f5f66626a32938fc4cee7e2c67b SHA256 f9222a8050410b8a035ca65652010771323f8178ccb4c9046a05216a939d017a
-DIST tzinfo-0.3.4.gem 292864 RMD160 f255015f03c570e55b813518a629ea99c2c09cd7 SHA1 fbe59774db7062e46021f6df72aaa7023e7d4939 SHA256 b6e89f588a478067b511bb013e7184f6ed4247f4a37315466b75f7de82154a62
-DIST tzinfo-0.3.5.gem 293376 RMD160 567051591a6bd2f3c66416dc8e1f323f7e6a2926 SHA1 a70b1864e5c560d40e1f62af65b08e26407525c1 SHA256 05cebcf8784ff2b3ca96bb610bbbbe877f712631be7fd8d610044aac0ffaad8c
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST tzinfo-0.3.6.gem 295424 RMD160 021b92438702cbcbf0fc915b5dae364a94b7ecbe SHA1 2af3ba43512fbf37eff31c1dd3e2e15bf53c463a SHA256 323bd84db535687dba17c866ca1cbbfa23e630ae9bd2a1233e8fa2d331d7f64c
-EBUILD tzinfo-0.3.3.ebuild 538 RMD160 6b060f393d5cd1119d48cef1e5775262f51ed72b SHA1 6b6ea2e706eaa0d261aa37430f36993b1c1215e0 SHA256 23f82d07a92aacdecfc9492b80d6b0033c255031e74691855070ccd9cb972d08
-EBUILD tzinfo-0.3.4.ebuild 535 RMD160 f990522fbc4ca6fffbc6343cb1ee002320ae2992 SHA1 3bce8e7ba24d1eeb09ce3b04975c8299156d7a3c SHA256 c11ad823af130002a23df3ffd24d2021668082e45c8fd4b693b84869bb3280b2
-EBUILD tzinfo-0.3.5.ebuild 460 RMD160 1181f71d2c1624c2726cdb0d7b950d670c8f5aa0 SHA1 3efc2b1a0e52dbf4e37de8af38c103a6bf62f6eb SHA256 f8b1b8dbc61cf6b6db4defca15cecb4128ebae5fe9aad654d68ed17d57204436
 EBUILD tzinfo-0.3.6.ebuild 432 RMD160 d5492864471f01a2b0cbc93d48b43c926dd76ddb SHA1 46a24e172200f28c720226e91212bb1c9e71ecbc SHA256 5e0e00edefa5f527d90b63695ff6589457aa0e62253210a58aaed0e019fb90d2
-MISC ChangeLog 1421 RMD160 218e249c06a1b63684cfb82ecbc9f82783ea5404 SHA1 b988b91744203895769410abeedf5e4eeb2fa2d4 SHA256 02ce3eed66850f3781ecd910d123016775045f94548f46132a87cded7c55bd31
+MISC ChangeLog 1562 RMD160 ccd2970403628dc1204e6b464c471c2d51c69922 SHA1 734d81cec897c35c908d9dd29b09f53f8d362a2e SHA256 001268728d1d1c4e0b9e5a76e0d8027f85f6db9c08b73864738673dece41c2ae
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFH4XFsQUozDL2JlH4RAk5CAKCBTPHQV1sSzVA6nQX+UlLCaI41zwCfZorr
+7jwZ/WN5ieMXJqkd4A8itsw=
+=LXRE
+-----END PGP SIGNATURE-----
