@@ -1,15 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/tzinfo/Attic/tzinfo-0.3.5.ebuild,v 1.1 2007/11/04 07:58:19 graaff Exp $
-
-inherit ruby gems
-
-DESCRIPTION="Library to provide daylight-savings aware transformations between timezones"
-HOMEPAGE="http://tzinfo.rubyforge.org/"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86 ~x86-fbsd"
-IUSE=""
-
-DEPEND="virtual/ruby"
