@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/tzinfo
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/tzinfo/ChangeLog,v 1.8 2008/01/26 07:54:32 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/tzinfo/ChangeLog,v 1.9 2008/03/19 20:02:47 graaff Exp $
+
+  19 Mar 2008; Hans de Graaff <graaff@gentoo.org> -tzinfo-0.3.3.ebuild,
+  -tzinfo-0.3.4.ebuild, -tzinfo-0.3.5.ebuild:
+  Remove old versions
 
 *tzinfo-0.3.6 (26 Jan 2008)
 
